--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "peliculasApi.Controllers.GenerosController": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
