--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "frontend_url": "http://localhost:5173",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=PeliculasAPI; User=sa; Password=Srv_desarrollo!!!; TrustServerCertificate=True; MultipleActiveResultSets=true"
   }
 }
